--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -48,11 +48,11 @@
                                 <label for="checkbox-fill-a1" class="cr"> Save Details</label>
                             </div>
                         </div>
-                        <button type="submit" name="login" class="btn btn-primary shadow-2 mb-4">Login</button>
+                        <button type="submit" name="login" class="btn btn-primary shadow-2 mb-4">Login / Prijava</button>
 
                     </form>
 
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="{{ url_for('authentication_blueprint.register') }}" >Sign UP</a></p>
+                    <p class="mb-0 text-muted">Don’t have an account? <a href="{{ url_for('authentication_blueprint.register') }}" >Sign UP / Register</a></p>
                     
                     <br />
                     <p class="mb-2 text-muted">
