--- a/apps/templates/home/dancers.html
+++ b/apps/templates/home/dancers.html
@@ -45,9 +45,15 @@
                           <div class="col-sm-12">
                               <div class="card">
                                   <div class="card-header">
-                                      <h3 class="card-title"><button type="button" class="btn btn-primary btn-square" data-toggle="modal" data-target="#newDancer">
+                                    
+
+                                      <h3 class="card-title">
+                                      {% if current_user.role == 'user' %}
+                                        <button type="button" class="btn btn-primary btn-square" data-toggle="modal" data-target="#newDancer">
                                         Novi / New 
-                                      </button> <span>{{ msg }}</span></h3>
+                                        </button>
+                                      {% endif %}
+                                     <span>{{ msg }}</span></h3>
                                   </div>
                                   <div class="card-block">
                                     <table id="dancers" class="table table-bordered table-hover">
@@ -109,32 +115,27 @@
           <div class="card-body">
             <div class="form-group">
               <label for="name">Dancer name / Ime plesača</label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="Dancer name / Ime plesača">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Dancer name / Ime plesača" required>
             </div>
             <div class="form-group">
               <label for="lastname">Dancer last name / Prezime plesača</label>
-              <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Dancer last name / Prezime plesača">
+              <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Dancer last name / Prezime plesača" required>
             </div>
             <div class="form-group">
               <label for="name">Birth date / Datum rođenja</label>
-              <input type="date" class="form-control" id="birth_date" name="birth_date" placeholder="Birth date / Datum rođenja">
+              <input type="date" class="form-control" id="birth_date" name="birth_date" placeholder="Birth date / Datum rođenja" required>
             </div>
             <div class="form-group">
               <label>Gender / Spol</label>
               <select class="form-control" id="sex" name="sex">
-                <option value="M">Male / Muško</option>
                 <option value="F">Female / Žensko</option>
+                <option value="M">Male / Muško</option>
               </select>
             </div>
             <div class="form-group">
               <label for="picture">Slika / Picture</label><br>
               <input type="file" name="picture" id="picture" accept=".png,.jpg,.jpeg">
               <p>Slika mora biti portret / The picture must be a portrait</p>
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="gdpr" required>
-              <label class="form-check-label" for="exampleCheck1">Slažem se s člankom 13 GDPR-a /
-                I declare that I have read the information that is required in accordance with Article 13 of GDPR.</label>
             </div>
           </div>
           <!-- /.card-body -->
@@ -189,11 +190,6 @@
               <label for="picture">Slika / Picture</label><br>
               <input type="file" name="picture" id="picture" accept=".png,.jpg,.jpeg">
               <p>Slika mora biti portret / The picture must be a portrait</p>
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="gdpr" required>
-              <label class="form-check-label" for="exampleCheck1">Slažem se s člankom 13 GDPR-a /
-                I declare that I have read the information that is required in accordance with Article 13 of GDPR.</label>
             </div>
           </div>
           <!-- /.card-body -->
