--- a/apps/templates/home/event_ordering.html
+++ b/apps/templates/home/event_ordering.html
@@ -8,23 +8,36 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://kit.fontawesome.com/ba212557d7.css" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/ba212557d7.js" crossorigin="anonymous"></script>
   <!-- Theme style -->
   <link rel="stylesheet" href="/static/assets/css/adminlte.min.css">
 
-  <!-- DataTables -->
-  <link rel="stylesheet" href="/static/assets/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
-  <link rel="stylesheet" href="/static/assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
 {% endblock stylesheets %}
 
 
 {% block content %}
 
+<style>
+    #sortable1, #sortable2 {
+      border: 1px solid #eee;
+      width: 35%;
+      min-height: 20px;
+      list-style-type: none;
+      margin: 0;
+      padding: 5px 0 0 0;
+      float: left;
+      margin-right: 10px;
+    }
+    #sortable1 li, #sortable2 li {
+      cursor: grab;
+      margin: 0 5px 5px 5px;
+      padding: 5px;
+      font-size: 1.2em;
+      width: 98%;
+    }
+    </style>
 
 <!-- [ Main Content ] start -->
 <div class="pcoded-main-container">
@@ -66,8 +79,9 @@
                                             </div>
                                         </div>
                                         </div>
+
                                         <div class="card-block">
-                                        <form action="editOrdering" method="post" enctype="multipart/form-data">
+                                        
                                         <div class="row">
                                             <div class="col-4">
                                                 <select class="form-control" name="id_head" id="id_head">
@@ -84,40 +98,48 @@
                                             </div>
                                         </div>
                                         <hr>
+                                        <form action="editOrdering" method="post" enctype="multipart/form-data">
+                                        {% set id_head = request.args.get('id_head') %}
                                         <input type="hidden" name="id_event" value="{{ data.id }}">
-                                        <table id="ordering" class="table table-bordered table-hover">
-                                          <thead>
-                                            <tr>
-                                                <th></th>
-                                                <th>#</th>
-                                                <th>Age Group</th>
-                                                <th>Discipline</th>
-                                                <th>Category</th>
-                                                <th>Order</th>
-                                                <th>List</th>
-                                            </tr>
-                                          </thead>
-                                          <tbody>
+                                        <input type="hidden" name="id_head" value="{{ id_head }}">
+                                        
+                                        {% if id_head|int > 0 %}
+                                        <button type="submit" class="btn btn-primary btn-square">Spremi</button><br>
+                                        {% endif %}
+
+                                        <ul id="sortable1" class="connectedSortable">
                                             {% for ac in activeCategorys %}
-                                                    {% set c = '' %}
-                                                    {% set id_head = request.args.get('id_head') %}
-                                                    {% if id_head|int > 0 and ac.ordering|int > 0 %}
-                                                        {% set c = 'checked' %}
-                                                    {% endif %}
-                                                <tr>
-                                                    <td><input {{ c }} type="checkbox" name="row_s" class="form-control" value="{{ loop.index }}"></td>
-                                                    <td>{{ loop.index }}</td>
-                                                    <td><input type="hidden" name="row_ag" value="{{ ac.age_group }}"> {{ ac.age_group_name }}</td>
-                                                    <td><input type="hidden" name="row_d" value="{{ ac.discipline }}"> {{ ac.discipline_name }}</td>
-                                                    <td><input type="hidden" name="row_c" value="{{ ac.category }}"> {{ ac.category_name }}</td>
-                                                    <td><input type="number" name="row_o" class="form-control" value="{{ ac.ordering }}"></td>
-                                                    <td>{{ ac.list }}</td>
-                                                </tr>
+                                                {% set id_head = request.args.get('id_head') %}
+                                                {% if id_head|int > 0 and ac.ordering|int > 0 %}
+                                                <li class="ui-state-highlight">
+                                                    <input type="hidden" name="row_ag" value="{{ ac.age_group }}">
+                                                    <input type="hidden" name="row_d" value="{{ ac.discipline }}">
+                                                    <input type="hidden" name="row_c" value="{{ ac.category }}">
+                                                    <input type="hidden" name="row_l" value="{{ ac.level }}">
+                                                    {{ ac.age_group_name }} {{ ac.discipline_name }} {{ ac.category_name }} {{ ac.level_name }}</li>
+                                                {% endif %}
                                             {% endfor %}
-                                          </tbody>
-                                        </table>
-                                        <button type="submit" class="btn btn-primary btn-square">Spremi</button>
+                                        </ul>
                                         </form>
+                                        <ul id="sortable2" class="connectedSortable">
+                                            {% for ac in activeCategorys %}
+                                                {% set id_head = request.args.get('id_head') %}
+                                                
+                                                {% if id_head|int > 0 and ac.ordering|int > 0 %}
+                                                    
+                                                {% else %}
+                                                <li class="ui-state-default">
+                                                    <input type="hidden" name="row_ag" value="{{ ac.age_group }}">
+                                                    <input type="hidden" name="row_d" value="{{ ac.discipline }}">
+                                                    <input type="hidden" name="row_c" value="{{ ac.category }}">
+                                                    <input type="hidden" name="row_l" value="{{ ac.level }}">
+                                                    {{ ac.age_group_name }} {{ ac.discipline_name }} {{ ac.category_name }} {{ ac.level_name }}</li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
+                                        
+                                        
+                                        
                                         </div>
                                     </div>
                                 </div>
@@ -128,10 +150,11 @@
                 </div>
             </div>
         </div>
-        
+       
     </div>
     <!-- [ Main Content ] end -->
 
+    
 
     <div class="modal fade" id="newList" tabindex="-1" role="dialog" aria-labelledby="newList" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -170,6 +193,8 @@
         </div>
         </div>
     </div>
+
+    
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
@@ -177,12 +202,7 @@
 
 <script>
     $(document).ready(function () {
-      $('#ordering').DataTable({
-       "paging": true,
-         "searching": true,
-         "ordering": true,
-         "responsive": false,
-      });
+
     });
 
     $( "#id_head" ).change(function() {
@@ -200,4 +220,13 @@
     });
    </script>
 
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script>
+$( function() {
+    $( "#sortable1, #sortable2" ).sortable({
+        connectWith: ".connectedSortable"
+    }).disableSelection();
+} );
+</script>
 {% endblock javascripts %}
