--- a/apps/templates/home/register.html
+++ b/apps/templates/home/register.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <button class="btn btn-primary shadow-2 mb-4">Sign up</button>
-                    <p class="mb-0 text-muted">Allready have an account? <a href="/login.html"> Sign IN</a></p>
+                    <p class="mb-0 text-muted">Allready have an account? <a href="/login.html"> Sign IN / Prijava</a></p>
                 </div>
             </div>
         </div>
